Added clothing, electronics, groceries pages

--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
                             <span>All departments</span>
                         </div>
                         <ul>
-                            <li><a href="#">Clothing, Shoes, Jewelry & Watches</a></li>
-                            <li><a href="#">Fresh Foods & Grocery</a></li>
+                            <li><a href="clothing.html">Clothing, Shoes, Jewelry & Watches</a></li>
+                            <li><a href="groceries.html">Fresh Foods & Grocery</a></li>
                             <li><a href="#">Household Essentials</a></li>
                             <li><a href="#">Books</a></li>
                             <li><a href="#">Movies, Music & Games</a></li>
-                            <li><a href="#">Electronics</a></li>
+                            <li><a href="electronics.html">Electronics</a></li>
                             <li><a href="#">Computers</a></li>
                             <li><a href="#">Home, Garden & Tools</a></li>
                             <li><a href="#">Pet Supplies</a></li>
@@ -184,7 +184,7 @@
                     </div>
                     <div class="col-lg-3">
                         <div class="categories__item set-bg" data-setbg="img/categories/cat-5.jpg">
-                            <h5><a href="#">Electronics</a></h5>
+                            <h5><a href="electronics.html">Electronics</a></h5>
                         </div>
                     </div>
                 </div>
