--- a/about.html
+++ b/about.html
@@ -183,7 +183,7 @@
                     </div>
                     <div class="col-lg-3">
                         <div class="categories__item set-bg" data-setbg="img/categories/cat-5.jpg">
-                            <h5><a href="#">Electronics</a></h5>
+                            <h5><a href="electronics.html">Electronics</a></h5>
                         </div>
                     </div>
                 </div>
