--- a/shop-details.html
+++ b/shop-details.html
@@ -109,12 +109,12 @@
                             <span>All departments</span>
                         </div>
                         <ul>
-                            <li><a href="#">Clothing, Shoes, Jewelry & Watches</a></li>
-                            <li><a href="#">Fresh Foods & Grocery</a></li>
+                            <li><a href="clothing.html">Clothing, Shoes, Jewelry & Watches</a></li>
+                            <li><a href="groceries.html">Fresh Foods & Grocery</a></li>
                             <li><a href="#">Household Essentials</a></li>
                             <li><a href="#">Books</a></li>
                             <li><a href="#">Movies, Music & Games</a></li>
-                            <li><a href="#">Electronics</a></li>
+                            <li><a href="electronics.html">Electronics</a></li>
                             <li><a href="#">Computers</a></li>
                             <li><a href="#">Home, Garden & Tools</a></li>
                             <li><a href="#">Pet Supplies</a></li>
