Adding clothing and grocieries font weight

--- a/clothing.html
+++ b/clothing.html
@@ -108,8 +108,8 @@
                             <i class="fa fa-bars"></i>
                             <span>All departments</span>
                         </div>
-                        <ul>
-                            <li><a href="clothing.html">Clothing, Shoes, Jewelry & Watches</a></li>
+                        <ul>    
+                            <li><a class="activecategory" href="clothing.html">Clothing, Shoes, Jewelry & Watches</a></li>
                             <li><a href="groceries.html">Fresh Foods & Grocery</a></li>
                             <li><a href="#">Household Essentials</a></li>
                             <li><a href="#">Books</a></li>
@@ -169,7 +169,7 @@
                         <div class="sidebar__item">
                             <h4>Department</h4>
                             <ul>
-                                <li><a href="clothing.html">Clothing, Shoes, Jewelry & Watches</a></li>
+                                <li><a class="activecategory" href="clothing.html">Clothing, Shoes, Jewelry & Watches</a></li>
                                 <li><a href="groceries.html">Fresh Foods & Grocery</a></li>
                                 <li><a href="#">Household Essentials</a></li>
                                 <li><a href="#">Books</a></li>
