--- a/electronics.html
+++ b/electronics.html
@@ -114,7 +114,7 @@
                             <li><a href="#">Household Essentials</a></li>
                             <li><a href="#">Books</a></li>
                             <li><a href="#">Movies, Music & Games</a></li>
-                            <li><a href="electronics.html">Electronics</a></li>
+                            <li><a class="activecategory" href="electronics.html">Electronics</a></li>
                             <li><a href="#">Computers</a></li>
                             <li><a href="#">Home, Garden & Tools</a></li>
                             <li><a href="#">Pet Supplies</a></li>
@@ -174,7 +174,7 @@
                                 <li><a href="#">Household Essentials</a></li>
                                 <li><a href="#">Books</a></li>
                                 <li><a href="#">Movies, Music & Games</a></li>
-                                <li><a href="electronics.html">Electronics</a></li>
+                                <li><a class="activecategory" href="electronics.html">Electronics</a></li>
                                 <li><a href="#">Computers</a></li>
                                 <li><a href="#">Home, Garden & Tools</a></li>
                                 <li><a href="#">Pet Supplies</a></li>
