--- a/groceries.html
+++ b/groceries.html
@@ -110,7 +110,7 @@
                         </div>
                         <ul>
                             <li><a href="clothing.html">Clothing, Shoes, Jewelry & Watches</a></li>
-                            <li><a href="groceries.html">Fresh Foods & Grocery</a></li>
+                            <li><a class="activecategory" href="groceries.html">Fresh Foods & Grocery</a></li>
                             <li><a href="#">Household Essentials</a></li>
                             <li><a href="#">Books</a></li>
                             <li><a href="#">Movies, Music & Games</a></li>
@@ -170,7 +170,7 @@
                             <h4>Department</h4>
                             <ul>
                                 <li><a href="clothing.html">Clothing, Shoes, Jewelry & Watches</a></li>
-                                <li><a href="groceries.html">Fresh Foods & Grocery</a></li>
+                                <li><a class="activecategory" href="groceries.html">Fresh Foods & Grocery</a></li>
                                 <li><a href="#">Household Essentials</a></li>
                                 <li><a href="#">Books</a></li>
                                 <li><a href="#">Movies, Music & Games</a></li>
