Added Search functionality - search for products via search bar

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                                     All Categories
                                     <span class="arrow_carrot-down"></span>
                                 </div>
-                                <input type="text" placeholder="What do you need?">
-                                <button type="submit" class="site-btn">SEARCH</button>
+                                <input type="text" id="search-input" placeholder="What do you need?">
+                                <button type="submit" onclick="searchProduct()" class="site-btn">SEARCH</button>
                             </form>
                         </div>
                     </div>
@@ -472,6 +472,7 @@
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
+    <script type="text/javascript" src="js/searchProducts.js"></script>
 
 
 
