changing js file name

--- a/shop-details.html
+++ b/shop-details.html
@@ -402,7 +402,7 @@
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
-    <script type="text/javascript" src="js/searchProducts.js"></script>
+    <script type="text/javascript" src="js/quickCart.js"></script>
 
     <script>
         // Call the function to display product details on page load
