--- a/shoping-cart.html
+++ b/shoping-cart.html
@@ -359,7 +359,7 @@
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
-    <script type="text/javascript" src="js/searchProducts.js"></script>
+    <script type="text/javascript" src="js/quickCart.js"></script>
 
 </body>
 
