--- a/about.html
+++ b/about.html
@@ -33,12 +33,12 @@
     <div class="humberger__menu__overlay"></div>
     <div class="humberger__menu__wrapper">
         <div class="humberger__menu__logo">
-            <a href="#"><img src="img/logo.png" height="80" width="100"></a>
+            <a href="#"><img src="img/logo.png" height="50" width="150"></a>
         </div>
         <div class="humberger__menu__cart">
             <ul>
                 <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
-                <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+                <li><a href="shoping-cart.html"><i class="fa fa-shopping-bag"></i> <span></span></a></li>
             </ul>
         </div>
         <div class="humberger__menu__widget">
@@ -65,7 +65,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" height="80" width="100" alt=""></a>
+                        <a href="./index.html"><img src="img/logo.png" height="50" width="150" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -83,9 +83,9 @@
                     <div class="header__cart">
                         <ul>
                             <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
-                            <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+                            <li><a href="shoping-cart.html"><i class="fa fa-shopping-bag"></i> <span id="cart-count"></span></a></li>
                             <div class="header__top__right__auth">
-                                <a href="#"><i class="fa fa-user"></i> Login</a>
+                                <a href="login.html" id="login-btn"><i class="fa fa-user"></i> Login</a>
                             </div>
                         </ul>
                     </div>
@@ -199,7 +199,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__about__logo">
-                            <a href="./index.html"><img src="img/logo.png" height="80" width="100" alt=""></a>
+                            <a href="./index.html"><img src="img/logo.png" height="50" width="150" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -267,6 +267,7 @@
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
+    <script type="text/javascript" src="js/quickCart.js"></script>
 
 
 
