--- a/shop-details.html
+++ b/shop-details.html
@@ -33,12 +33,12 @@
      <div class="humberger__menu__overlay"></div>
      <div class="humberger__menu__wrapper">
          <div class="humberger__menu__logo">
-             <a href="#"><img src="img/logo.png" height="80" width="100"></a>
+             <a href="#"><img src="img/logo.png" height="50" width="150"></a>
          </div>
          <div class="humberger__menu__cart">
              <ul>
                  <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
-                 <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+                 <li><a href="shoping-cart.html"><i class="fa fa-shopping-bag"></i> <span></span></a></li>
              </ul>
          </div>
          <div class="humberger__menu__widget">
@@ -65,7 +65,7 @@
         <div class="row">
             <div class="col-lg-3">
                 <div class="header__logo">
-                    <a href="./index.html"><img src="img/logo.png" height="80" width="100" alt=""></a>
+                    <a href="./index.html"><img src="img/logo.png" height="50" width="150" alt=""></a>
                 </div>
             </div>
             <div class="col-lg-6">
@@ -83,9 +83,9 @@
                 <div class="header__cart">
                     <ul>
                         <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
-                        <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+                        <li><a href="shoping-cart.html"><i class="fa fa-shopping-bag"></i> <span id="cart-count"></span></a></li>
                         <div class="header__top__right__auth">
-                            <a href="#"><i class="fa fa-user"></i> Login</a>
+                            <a href="login.html" id="login-btn"><i class="fa fa-user"></i> Login</a>
                         </div>
                     </ul>
                 </div>
@@ -201,11 +201,12 @@
                         <div class="product__details__quantity">
                             <div class="quantity">
                                 <div class="pro-qty">
-                                    <input type="text" value="1">
+                                    <input type="text" value="0">
                                 </div>
                             </div>
                         </div>
-                        <a href="#" class="primary-btn">ADD TO CARD</a>
+                        <a href="#" onclick="addToCart()" 
+                            class="primary-btn">GO TO CART</a>
                         <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
                         <ul>
                             <li><b>Availability</b> <span>In Stock</span></li>
@@ -334,7 +335,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__about__logo">
-                            <a href="./index.html"><img src="img/logo.png" height="80" width="100" alt=""></a>
+                            <a href="./index.html"><img src="img/logo.png" height="50" width="150" alt=""></a>
                         </div>
                     </div>
                 </div>
